<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_overlapTop="78dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".app.avengerDetail.AvengerDetailActivity"
    tools:showIn="@layout/activity_avenger_detail">

    <android.support.v7.widget.CardView
        style="@style/ContentCard"
        android:id="@+id/cardAvengerDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginM">

            <TextView
                style="@style/TextLarge"
                android:id="@+id/tvAliasTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_alias"
                android:layout_marginTop="@dimen/marginL"
                app:layout_constraintEnd_toStartOf="@+id/tvAgeTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailAlias"
                style="@style/TextLarge.Black"
                android:text="Stark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvAliasTitle"
                app:layout_constraintLeft_toLeftOf="@id/tvAliasTitle"
                app:layout_constraintRight_toRightOf="@id/tvAliasTitle"/>

            <TextView
                android:id="@+id/tvAgeTitle"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_age"
                android:layout_marginTop="@dimen/marginL"
                app:layout_constraintEnd_toStartOf="@+id/tvDoBTitle"
                app:layout_constraintStart_toEndOf="@+id/tvAliasTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailAge"
                style="@style/TextLarge.Black"
                android:text="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvAgeTitle"
                app:layout_constraintLeft_toLeftOf="@id/tvAgeTitle"
                app:layout_constraintRight_toRightOf="@id/tvAgeTitle"/>

            <TextView
                android:id="@+id/tvDoBTitle"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_dob"
                android:layout_marginTop="@dimen/marginL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAgeTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailDoB"
                style="@style/TextLarge.Black"
                android:text="1998"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDoBTitle"
                app:layout_constraintLeft_toLeftOf="@id/tvDoBTitle"
                app:layout_constraintRight_toRightOf="@id/tvDoBTitle"/>

            <TextView
                android:id="@+id/tvStoryTitle"
                style="@style/TextTitle"
                android:text="@string/detail_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginL"
                app:layout_constraintTop_toBottomOf="@id/tvDetailAlias"/>

            <TextView
                android:id="@+id/tvDetailStory"
                style="@style/TextLongRead"
                android:text="@string/lorem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                app:layout_constraintTop_toBottomOf="@id/tvStoryTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>